news_paper/logs/errors.log
2024-08-30 09:01:27,681 ERROR G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\utils\log.py (<class 'django.template.exceptions.TemplateSyntaxError'>, TemplateSyntaxError("Invalid block tag on line 66: 'endblock', expected 'endcache'. Did you forget to register or load this tag?"), <traceback object at 0x000001F8AAF29400>) Internal Server Error: /news/
Traceback (most recent call last):
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endblock'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\templatetags\cache.py", line 84, in do_cache
    nodelist = parser.parse(("endcache",))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\template\base.py", line 563, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 66: 'endblock', expected 'endcache'. Did you forget to register or load this tag?
2024-08-30 09:01:27,690 ERROR G:\Python_projects\SkillFactory\SkillFactory_NewsPaper\.venv\Lib\site-packages\django\core\servers\basehttp.py None "GET /news/ HTTP/1.1" 500 201625
